[gd_scene load_steps=26 format=2]

[ext_resource path="res://title/bg_scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/vines_frame.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/item_frame_1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/big_monkey.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sprites/yellow_frame.png" type="Texture" id=6]
[ext_resource path="res://levels/Player_main.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/basefont.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/sprites/hit_3.png" type="Texture" id=9]
[ext_resource path="res://UI/Message.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sprites/nanner.png" type="Texture" id=11]
[ext_resource path="res://levels/Shop.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sprites/monkey_1.png" type="Texture" id=13]
[ext_resource path="res://levels/Inventory.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/sprites/banana.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.295455 ), 0.0, 0.0, 0, 0, Vector2( 0.554945, 0.968182 ), 0.0, 0.0, 0, 0, Vector2( 0.978022, 0.15 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 228.22
initial_velocity_random = 0.22
angular_velocity = 427.92
angular_velocity_random = 0.66
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
scale_random = 0.48
scale_curve = SubResource( 6 )
hue_variation = 0.64
hue_variation_random = 0.11

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "loading"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Lobby" type="CanvasLayer"]

[node name="bg_scene" parent="." instance=ExtResource( 1 )]

[node name="Player_main" type="Control" parent="."]
margin_right = 1020.0
margin_bottom = 600.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boarder" type="TextureRect" parent="Player_main"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monkey" type="TextureRect" parent="Player_main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 88.0
margin_top = -192.0
margin_right = 310.0
margin_bottom = 177.0
texture = ExtResource( 4 )
expand = true

[node name="head_deco" type="Position2D" parent="Player_main/monkey"]
position = Vector2( 105, 20 )

[node name="body_deco" type="Position2D" parent="Player_main/monkey"]
position = Vector2( 106, 166 )

[node name="arm_speed_label" type="Label" parent="Player_main"]
margin_left = 678.0
margin_top = 86.0
margin_right = 718.0
margin_bottom = 110.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 8 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player_main/arm_speed_label"]
margin_left = -18.0
margin_top = -25.0
margin_right = 52.0
margin_bottom = -11.0
text = "Arm Speed"

[node name="left_hand" type="TextureRect" parent="Player_main"]
margin_left = 489.0
margin_top = 221.0
margin_right = 589.0
margin_bottom = 321.0
texture = ExtResource( 3 )

[node name="icon" type="TextureRect" parent="Player_main/left_hand"]
margin_left = 11.0
margin_top = 13.0
margin_right = 88.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="Player_main/left_hand"]
margin_left = -1.0
margin_top = -21.0
margin_right = 39.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 8 )
text = "Left Hand"

[node name="left_select_panel" type="TextureRect" parent="Player_main/left_hand"]
visible = false
margin_left = -94.0
margin_top = -31.0
margin_right = 178.0
margin_bottom = 249.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Player_main/left_hand/left_select_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 8 )
text = "Select Item"

[node name="LH_ItemList" type="ItemList" parent="Player_main/left_hand/left_select_panel"]
margin_left = 22.0
margin_top = 38.0
margin_right = 244.0
margin_bottom = 254.0
max_columns = 2
icon_mode = 0

[node name="left_shoulder" type="TextureRect" parent="Player_main"]
margin_left = 513.0
margin_top = 81.0
margin_right = 613.0
margin_bottom = 181.0
texture = ExtResource( 3 )

[node name="icon" type="TextureRect" parent="Player_main/left_shoulder"]
margin_left = 12.0
margin_top = 10.0
margin_right = 89.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player_main/left_shoulder"]
margin_left = 3.0
margin_top = -23.0
margin_right = 91.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
text = "Shoulder:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_shoulder_select_panel2" type="TextureRect" parent="Player_main/left_shoulder"]
visible = false
margin_left = -86.0
margin_top = -29.0
margin_right = 186.0
margin_bottom = 251.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Player_main/left_shoulder/left_shoulder_select_panel2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 8 )
text = "Select Item"

[node name="LS_ItemList" type="ItemList" parent="Player_main/left_shoulder/left_shoulder_select_panel2"]
margin_left = 22.0
margin_top = 38.0
margin_right = 244.0
margin_bottom = 254.0
max_columns = 2
icon_mode = 0

[node name="right_hand" type="TextureRect" parent="Player_main"]
margin_left = 809.0
margin_top = 221.0
margin_right = 909.0
margin_bottom = 321.0
texture = ExtResource( 3 )

[node name="icon" type="TextureRect" parent="Player_main/right_hand"]
margin_left = 10.0
margin_top = 11.0
margin_right = 87.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player_main/right_hand"]
margin_top = -21.0
margin_right = 98.0
margin_bottom = 3.0
custom_fonts/font = ExtResource( 8 )
text = "Right Hand"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_select_panel" type="TextureRect" parent="Player_main/right_hand"]
visible = false
margin_left = -80.0
margin_top = -33.0
margin_right = 192.0
margin_bottom = 247.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Player_main/right_hand/right_select_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 8 )
text = "Select Item"

[node name="RH_ItemList" type="ItemList" parent="Player_main/right_hand/right_select_panel"]
margin_left = 22.0
margin_top = 38.0
margin_right = 244.0
margin_bottom = 254.0
max_columns = 2
icon_mode = 0

[node name="right_shoulder" type="TextureRect" parent="Player_main"]
margin_left = 794.0
margin_top = 84.0
margin_right = 894.0
margin_bottom = 184.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Player_main/right_shoulder"]
margin_left = 11.0
margin_top = 11.0
margin_right = 88.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player_main/right_shoulder"]
margin_top = -23.0
margin_right = 88.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
text = "Shoulder:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_shoulder_select_panel" type="TextureRect" parent="Player_main/right_shoulder"]
visible = false
margin_left = -83.0
margin_top = -28.0
margin_right = 189.0
margin_bottom = 252.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player_main/right_shoulder/right_shoulder_select_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 8 )
text = "Select Item"

[node name="RS_ItemList" type="ItemList" parent="Player_main/right_shoulder/right_shoulder_select_panel"]
margin_left = 22.0
margin_top = 38.0
margin_right = 244.0
margin_bottom = 254.0
max_columns = 2
icon_mode = 0

[node name="main_panel" type="TextureRect" parent="Player_main"]
margin_left = 96.0
margin_top = 136.0
margin_right = 402.0
margin_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 510, 200 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Player_main/main_panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -42.0
margin_right = 76.0
custom_fonts/font = SubResource( 1 )
text = "Quit Game"

[node name="Shop" type="Button" parent="Player_main/main_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = 164.0
margin_right = 32.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 2 )
text = "Shop"

[node name="inventory" type="Button" parent="Player_main/main_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.0
margin_top = 235.0
margin_right = 93.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "View Inventory"

[node name="naner_icon" type="TextureRect" parent="Player_main/main_panel"]
margin_left = 46.0
margin_top = 34.0
margin_right = 104.0
margin_bottom = 88.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player_main/main_panel/naner_icon"]
margin_top = 66.0
margin_right = 51.0
margin_bottom = 90.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 8 )
text = "X 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="Player_main/main_panel/naner_icon"]
position = Vector2( 29, 27 )
z_index = 1
emitting = false
amount = 50
lifetime = 0.7
one_shot = true
explosiveness = 0.52
process_material = SubResource( 7 )
texture = ExtResource( 9 )

[node name="MB_icon" type="Button" parent="Player_main/main_panel"]
margin_left = 164.0
margin_top = 23.0
margin_right = 222.0
margin_bottom = 77.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 32, 32 )
icon = ExtResource( 13 )

[node name="Label" type="Label" parent="Player_main/main_panel/MB_icon"]
margin_left = 78.0
margin_top = 52.0
margin_right = 129.0
margin_bottom = 76.0
grow_horizontal = 2
rect_rotation = -90.0
custom_fonts/font = ExtResource( 8 )
text = "X 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy_MB_panel" type="TextureRect" parent="Player_main/main_panel/MB_icon"]
visible = false
margin_left = 105.0
margin_top = -68.0
margin_right = 263.0
margin_bottom = 217.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_mb" type="Button" parent="Player_main/main_panel/MB_icon/Buy_MB_panel"]
margin_left = 116.0
margin_top = 211.0
margin_right = 161.0
margin_bottom = 241.0
rect_rotation = -90.0
custom_fonts/font = ExtResource( 8 )
text = "Yes"

[node name="no_mb" type="Button" parent="Player_main/main_panel/MB_icon/Buy_MB_panel"]
margin_left = 115.0
margin_top = 110.0
margin_right = 160.0
margin_bottom = 140.0
rect_rotation = -90.0
custom_fonts/font = ExtResource( 8 )
text = "No"

[node name="Label" type="Label" parent="Player_main/main_panel/MB_icon/Buy_MB_panel"]
margin_left = 15.0
margin_top = 219.0
margin_right = 317.0
margin_bottom = 297.0
rect_rotation = -90.0
custom_fonts/font = ExtResource( 8 )
text = "Buy 
50 MonkeyBux for 
1 Nanner?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Player_main"]
margin_left = 548.0
margin_top = 464.0
margin_right = 865.0
margin_bottom = 535.0
custom_fonts/font = SubResource( 3 )
text = "Go Bananas!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="Label" parent="Player_main"]
margin_left = 147.0
margin_top = 52.0
margin_right = 314.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "name + level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp" type="Label" parent="Player_main"]
margin_left = 147.0
margin_top = 92.0
margin_right = 314.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 4 )
text = "exp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" parent="Player_main" instance=ExtResource( 12 )]

[node name="Inventory" parent="Player_main" instance=ExtResource( 14 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -300.0
margin_right = 510.0
margin_bottom = 300.0

[node name="Message" parent="Player_main" instance=ExtResource( 10 )]
visible = false
margin_left = 333.0
margin_top = 51.0
margin_right = 738.0
margin_bottom = 427.0

[node name="loading_panel" type="Panel" parent="Player_main"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player_main/loading_panel"]
margin_left = 171.0
margin_top = 229.0
margin_right = 527.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 8 )
text = "Loading"

[node name="Sprite" type="Sprite" parent="Player_main/loading_panel"]
position = Vector2( 604, 304 )
texture = ExtResource( 15 )

[node name="Sprite2" type="Sprite" parent="Player_main/loading_panel"]
visible = false
position = Vector2( 694, 303 )
texture = ExtResource( 15 )

[node name="Sprite3" type="Sprite" parent="Player_main/loading_panel"]
visible = false
position = Vector2( 779, 302 )
texture = ExtResource( 15 )

[node name="Sprite4" type="Sprite" parent="Player_main/loading_panel"]
visible = false
position = Vector2( 867, 301 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player_main/loading_panel"]
anims/RESET = SubResource( 9 )
anims/loading = SubResource( 10 )

[connection signal="gui_input" from="Player_main/left_hand" to="Player_main" method="_on_left_hand_gui_input"]
[connection signal="mouse_exited" from="Player_main/left_hand/left_select_panel" to="Player_main" method="_on_left_select_panel_mouse_exited"]
[connection signal="item_selected" from="Player_main/left_hand/left_select_panel/LH_ItemList" to="Player_main" method="_on_LH_ItemList_item_selected"]
[connection signal="mouse_entered" from="Player_main/left_shoulder" to="Player_main" method="_on_left_shoulder_mouse_entered"]
[connection signal="mouse_exited" from="Player_main/left_shoulder/left_shoulder_select_panel2" to="Player_main" method="_on_left_shoulder_select_panel2_mouse_exited"]
[connection signal="mouse_entered" from="Player_main/right_hand" to="Player_main" method="_on_right_hand_mouse_entered"]
[connection signal="mouse_exited" from="Player_main/right_hand/right_select_panel" to="Player_main" method="_on_right_select_panel_mouse_exited"]
[connection signal="item_selected" from="Player_main/right_hand/right_select_panel/RH_ItemList" to="Player_main" method="_on_RH_ItemList_item_selected"]
[connection signal="mouse_entered" from="Player_main/right_shoulder" to="Player_main" method="_on_right_shoulder_mouse_entered"]
[connection signal="mouse_exited" from="Player_main/right_shoulder/right_shoulder_select_panel" to="Player_main" method="_on_right_shoulder_select_panel_mouse_exited"]
[connection signal="item_selected" from="Player_main/right_shoulder/right_shoulder_select_panel/RS_ItemList" to="Player_main" method="_on_RS_ItemList_item_selected"]
[connection signal="pressed" from="Player_main/main_panel/Quit" to="Player_main" method="_on_Quit_pressed"]
[connection signal="pressed" from="Player_main/main_panel/Shop" to="Player_main" method="_on_Shop_pressed"]
[connection signal="pressed" from="Player_main/main_panel/inventory" to="Player_main" method="_on_inventory_pressed"]
[connection signal="pressed" from="Player_main/main_panel/MB_icon" to="Player_main" method="_on_MB_icon_pressed"]
[connection signal="pressed" from="Player_main/main_panel/MB_icon/Buy_MB_panel/yes_mb" to="Player_main" method="_on_yes_mb_pressed"]
[connection signal="pressed" from="Player_main/main_panel/MB_icon/Buy_MB_panel/no_mb" to="Player_main" method="_on_no_mb_pressed"]
[connection signal="pressed" from="Player_main/Start" to="Player_main" method="_on_Start_pressed"]
